# NFR

./: .gitignore  NFR.py  README.md  build.ps1  build.sh  pyproject.toml  req.yaml  requirements.txt
